--- a/config_sample.env
+++ b/config_sample.env
@@ -1,32 +1,30 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = " 5479224125:AAGsoI9cGFnTt9xLkejJ-JsOgxUQKYfsKfY"
+GDRIVE_FOLDER_ ID = "1m7ab_kwTp3YX2PD57F_dGIvlkgEI3jpi"
+OWNER_ID = 1713177274
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+TELEGRAM_API = 18207435
+TELEGRAM_HASH = "1d6e12dadad685ad4249a6f97f1b98a5"
 # OPTIONAL CONFIG
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "True"
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://winter.phoenixfiles.workers.dev/0:/MIRROR"
+STATUS_LIMIT = "7"
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/anasty17/mirror-leech-telegram-bot"
+UPSTREAM_BRANCH = "h-code"
 # Leech
 USER_SESSION_STRING = ""
 LEECH_SPLIT_SIZE = ""
@@ -34,7 +32,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://phoenixmirror.heroku.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
